[metadata]
name = ProbRobScene
version = 1.0.1
author = Craig Innes
author_email = craiginnes@gmail.com
description = A Probabilistic Specification Language for 3D Robotic Manipulation Environments
url = https://github.com/craigiedon/ProbRobScene

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.8

install_requires = 
	cffi
    numpy >= 1.18.2
    scipy >= 1.4.1
    matplotlib == 3.2.1
    dotmap >= 1.3.17

[options.packages.find]
where = src
